--- a/app/src/main/res/layout/artist_rank.xml
+++ b/app/src/main/res/layout/artist_rank.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/artistImage"
+        android:id="@+id/artist_image"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -18,7 +18,7 @@
         android:contentDescription="@string/profile_card_image_description"/>
 
     <TextView
-        android:id="@+id/topArtist"
+        android:id="@+id/top_artist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -29,11 +29,11 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/artistImage"
+        app:layout_constraintStart_toEndOf="@+id/artist_image"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/playsText"
+        android:id="@+id/plays_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -42,11 +42,11 @@
         android:textColor="@color/lightGray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/artistImage"
-        app:layout_constraintTop_toBottomOf="@+id/topArtist" />
+        app:layout_constraintStart_toEndOf="@+id/artist_image"
+        app:layout_constraintTop_toBottomOf="@+id/top_artist" />
 
     <TextView
-        android:id="@+id/dateText"
+        android:id="@+id/date_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -57,8 +57,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/artistImage"
-        app:layout_constraintTop_toBottomOf="@id/playsText" />
+        app:layout_constraintStart_toEndOf="@+id/artist_image"
+        app:layout_constraintTop_toBottomOf="@id/plays_text" />
 
     <View
         android:id="@+id/divider"
