--- a/app/src/main/res/layout/login_error.xml
+++ b/app/src/main/res/layout/login_error.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/image_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="@drawable/error"
@@ -21,7 +21,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -35,7 +35,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/tryAgainButton"
+        android:id="@+id/try_again_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/btn_sign_in_attempt_text"
