--- a/app/src/main/res/layout/walkthrough_fragment.xml
+++ b/app/src/main/res/layout/walkthrough_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable name="loading" type="boolean"/>
@@ -12,7 +11,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/linearLayout"
+            android:id="@+id/linear_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -35,11 +34,11 @@
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            app:layout_constraintTop_toBottomOf="@+id/linear_layout"
             app:visibleGone="@{loading}" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/pagerLayout"
+            android:id="@+id/pager_layout"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="64dp"
@@ -50,16 +49,16 @@
             app:visibleGone="@{!loading}">
 
             <androidx.viewpager.widget.ViewPager
-                android:id="@+id/viewPager"
+                android:id="@+id/view_pager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="64dp"
-                app:layout_constraintBottom_toBottomOf="@+id/pageIndicatorView"
+                app:layout_constraintBottom_toBottomOf="@+id/page_indicator_view"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <com.rd.PageIndicatorView
-                android:id="@+id/pageIndicatorView"
+                android:id="@+id/page_indicator_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="32dp"
@@ -71,19 +70,19 @@
                 app:piv_interactiveAnimation="true"
                 app:piv_selectedColor="@color/lightGray"
                 app:piv_unselectedColor="@color/darkGray"
-                app:piv_viewPager="@id/viewPager" />
+                app:piv_viewPager="@id/view_pager" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
-            android:id="@+id/signInButton"
+            android:id="@+id/sign_in_button"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:text="@string/btn_sign_in_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pagerLayout"
+            app:layout_constraintTop_toBottomOf="@id/pager_layout"
             app:visibleGone="@{!loading}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
